--- a/break-room/break-room.vcxproj
+++ b/break-room/break-room.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="scene1.h" />
     <ClInclude Include="scene2.h" />
     <ClInclude Include="scene3.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
