--- a/break-room/break-room.vcxproj.filters
+++ b/break-room/break-room.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="scene3.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
