--- a/break-room/break-room.vcxproj.filters
+++ b/break-room/break-room.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="scene3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="가위바위보.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="scene0.h">
@@ -45,6 +48,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="가위바위보.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
