--- a/break-room/break-room.vcxproj.filters
+++ b/break-room/break-room.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="가위바위보.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="보물찾기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="scene0.h">
@@ -51,6 +54,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="가위바위보.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="보물찾기.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
